[WCMSFEQ-958] Fix for icon layout on mobile.

--- a/CancerGov/_src/Scripts/NCI/UX/PageSpecific/Home/HomePage.scss
+++ b/CancerGov/_src/Scripts/NCI/UX/PageSpecific/Home/HomePage.scss
@@ -8,6 +8,9 @@
 .social-media-row {
 	display: flex;
 	margin-bottom: 2em;
+	&:before, &after {
+		display:none;
+	}
 }
 .social-media-card {
 	flex-grow: 1;
